[package]
name = "varied"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "migration",
    "entity"
]

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
sea-orm = { version = "0.12.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid", "postgres-array" ] }
serde = { version = "1.0.192", features = [ "derive" ] }
toml = { version = "0.8.8", features = [ "parse" ] }
axum = { version = "0.7.3", features =  ["multipart", "query", "json", "macros", "form", "tokio"]}
axum-extra = { version = "0.9.1", features = ["cookie", "cookie-private", "form"] }
tokio = { version = "1.33.0", features = ['full'] }
tower-http = { version = "0.5.0", features = ["full"] }
serde_json = "1.0.108"
url = { version = "2.4.1", features = ["serde"] }
uuid = "1.5.0"
argon2 = "0.5.2"
base64 = "0.21.5"
chrono = "0.4.31"
rand = "0.8.5"
ffmpeg-sidecar = "0.5.1"
sqids = "0.3.1"
tempfile = "3.9.0"
axum_typed_multipart = "0.11.0"
opendal = { version = "0.45.0", features = [ "services-http" ] }
biscuit-auth = { version = "4.1.1", features = [ "bwk" ] }
